# data-explorer

./: requirements.txt
data_explorer/: app.py  primitives.py  pyproject.toml  qt_extensions.py  qt_typing.py
data_explorer/docks/: array_dock.py  image_settings.py  panel.py
data_explorer/docks/panels/: base_panel.py  image_configuration.py  threshold.py
