[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-explorer"
version = "0.1.0"
description = "Interactive 3D array viewer"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
dependencies = [
  "numpy>=1.19",
  "pyqtgraph>=0.12",
  "PySide6>=6.2",
  "pyside6-mypy>=0.1.0",
]

[tool.mypy]
plugins = ["pyside6"]
ignore_missing_imports = true
strict = true
